# laravel-dev-setup

./: AGENTS.md  GEMINI.md  README.md  install.sh  installer.sh  main.py  pyproject.toml
installers/: composer.sh  mariadb.sh  node.sh  nodejs.sh  php.sh  shell.sh  valet.sh
lib/: detect.sh  repo.sh  ui.sh
src/installer/: __init__.py  __main__.py  app.py  rich_app.py
src/installer/screens/: done.py  install.py  services.py  welcome.py
src/installer/styles/: installer.tcss
tests/: test_app.py
